--- a/style.css
+++ b/style.css
@@ -363,6 +363,7 @@ header nav .liens {
     width: 100%;
     height: 50%;
     border-radius: 20px 20px 20px 20px;
+    margin-bottom: 20px;
 }
 #activitiesbox2 img {
     position: relative;
@@ -380,6 +381,7 @@ header nav .liens {
     width: 100%;
     height: 40%;
     border-radius: 20px 20px 20px 20px;
+    margin-top: 55px;
 }
 #activitiesbox3 img {
     position: relative;
@@ -430,6 +432,7 @@ header nav .liens {
     width: 100%;
     height: 50%;
     border-radius: 20px 20px 20px 20px;
+    margin-top: 55px;
 }
 #activitiesbox6 img {
     position: relative;
